add functionality for 'no items'

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <!-- TAB1 -->
             <section id="marzen" class="tab-panel">
               <div data-card-row class="card_row">
+                <div data-no-items class="no-items">No Items to display for this Category</div>
                 <div class="percard catalogue">
                   <a href="#">
                   <img
