--- a/index.html
+++ b/index.html
@@ -90,14 +90,16 @@
 
           <div class="search_set">
             <img src="https://www.svgrepo.com/show/13682/search.svg" alt="" />
-            <input type="text" class="search_product" placeholder="Search" />
+            <input type="text" data-search-product class="search_product" placeholder="Search" />
           </div>
           <div class="tab-panels">
             <!-- TAB1 -->
             <section id="marzen" class="tab-panel">
               <div data-card-row class="card_row">
-                <div data-no-items class="no-items">No Items to display for this Category</div>
-                <div class="percard catalogue">
+                <div data-no-items class="no-items">
+                  No Items to display for this Category
+                </div>
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/1.jpg"
@@ -105,10 +107,10 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Unpaired Gray Nike Running Shoe</p>
-                  <h4><span class="price">$200</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$200</span><span data-catalogue class="tag">Babies</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/2.jpg"
@@ -116,10 +118,10 @@
                   />
                   <span class="discount">-5%</span>
                   <p>White tank top</p>
-                  <h4><span class="price">$29</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$29</span><span data-catalogue class="tag">Babies</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/3.jpg"
@@ -130,7 +132,7 @@
                   <h4><span class="price">$50</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/4.jpg"
@@ -138,10 +140,10 @@
                   />
                   <span class="discount">-5%</span>
                   <p>White top and stunt jacket</p>
-                  <h4><span class="price">$250</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$250</span><span data-catalogue class="tag">Babies</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/5.jpg"
@@ -149,10 +151,10 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Main brown leather coat</p>
-                  <h4><span class="price">$100</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$100</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/6.jpg"
@@ -163,7 +165,7 @@
                   <h4><span class="price">$90</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/7.jpg"
@@ -174,7 +176,7 @@
                   <h4><span class="price">$110</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/8.jpg"
@@ -185,7 +187,7 @@
                   <h4><span class="price">$500</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/9.jpg"
@@ -193,10 +195,10 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Red and white crew neck t-shirt and white pants</p>
-                  <h4><span class="price">$90</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$90</span><span data-catalogue class="tag">Babies</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/10.jpg"
@@ -207,7 +209,7 @@
                   <h4><span class="price">$240</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/11.jpg"
@@ -215,10 +217,10 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Orange and white headdress</p>
-                  <h4><span class="price">$30</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$30</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/12.jpg"
@@ -226,10 +228,10 @@
                   />
                   <span class="discount">-5%</span>
                   <p>White and blue nike air force 1 high</p>
-                  <h4><span class="price">$300</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$300</span><span data-catalogue class="tag">Babies</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/13.jpg"
@@ -240,7 +242,7 @@
                   <h4><span class="price">$270</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/14.jpg"
@@ -248,10 +250,10 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Black, white, and gray textiles</p>
-                  <h4><span class="price">$99</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$99</span><span data-catalogue class="tag">Babies</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/15.jpg"
@@ -262,7 +264,7 @@
                   <h4><span class="price">$95</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
-                <div class="percard catalogue">
+                <div data-percard class="percard catalogue">
                   <a href="#">
                   <img
                     src="assets/images/products/16.jpg"
@@ -270,7 +272,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>White beach dress</p>
-                  <h4><span class="price">$220</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$220</span><span data-catalogue class="tag">Babies</span></h4>
                   </a>
                 </div>
               </div>
