add 'no-items' text, hover effects & modify README.md

--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
             <section id="marzen" class="tab-panel">
               <div data-card-row class="card_row">
                 <div data-no-items class="no-items">
-                  No Items to display for this Category
                 </div>
                 <div data-percard class="percard catalogue">
                   <a href="#">
@@ -107,7 +106,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Unpaired Gray Nike Running Shoe</p>
-                  <h4><span class="price">$200</span><span data-catalogue class="tag">Babies</span></h4>
+                  <h4><span class="price">$200</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -118,7 +117,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>White tank top</p>
-                  <h4><span class="price">$29</span><span data-catalogue class="tag">Babies</span></h4>
+                  <h4><span class="price">$29</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -129,7 +128,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Yellow and black bikini</p>
-                  <h4><span class="price">$50</span><span data-catalogue class="tag">Female</span></h4>
+                  <h4><span class="price">$50</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -140,7 +139,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>White top and stunt jacket</p>
-                  <h4><span class="price">$250</span><span data-catalogue class="tag">Babies</span></h4>
+                  <h4><span class="price">$250</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -151,7 +150,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Main brown leather coat</p>
-                  <h4><span class="price">$100</span><span data-catalogue class="tag">Female</span></h4>
+                  <h4><span class="price">$100</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -162,7 +161,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Pair of white-and-orange athletic shoes on white box</p>
-                  <h4><span class="price">$90</span><span data-catalogue class="tag">Female</span></h4>
+                  <h4><span class="price">$90</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -173,7 +172,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>White Nike running shoes standing</p>
-                  <h4><span class="price">$110</span><span data-catalogue class="tag">Female</span></h4>
+                  <h4><span class="price">$110</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -184,7 +183,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Assorted-color shirt lot hang on rack</p>
-                  <h4><span class="price">$500</span><span data-catalogue class="tag">Female</span></h4>
+                  <h4><span class="price">$500</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -195,7 +194,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Red and white crew neck t-shirt and white pants</p>
-                  <h4><span class="price">$90</span><span data-catalogue class="tag">Babies</span></h4>
+                  <h4><span class="price">$90</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -206,7 +205,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>View the photo by Mojtaba Fahiminia</p>
-                  <h4><span class="price">$240</span><span data-catalogue class="tag">Female</span></h4>
+                  <h4><span class="price">$240</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -217,7 +216,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Orange and white headdress</p>
-                  <h4><span class="price">$30</span><span data-catalogue class="tag">Female</span></h4>
+                  <h4><span class="price">$30</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -228,7 +227,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>White and blue nike air force 1 high</p>
-                  <h4><span class="price">$300</span><span data-catalogue class="tag">Babies</span></h4>
+                  <h4><span class="price">$300</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -239,7 +238,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Blue jacket and a black pant</p>
-                  <h4><span class="price">$270</span><span data-catalogue class="tag">Female</span></h4>
+                  <h4><span class="price">$270</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -250,7 +249,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Black, white, and gray textiles</p>
-                  <h4><span class="price">$99</span><span data-catalogue class="tag">Babies</span></h4>
+                  <h4><span class="price">$99</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -261,7 +260,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Two black top</p>
-                  <h4><span class="price">$95</span><span data-catalogue class="tag">Female</span></h4>
+                  <h4><span class="price">$95</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -272,7 +271,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>White beach dress</p>
-                  <h4><span class="price">$220</span><span data-catalogue class="tag">Babies</span></h4>
+                  <h4><span class="price">$220</span><span data-catalogue class="tag">Male</span></h4>
                   </a>
                 </div>
               </div>
