fix category text

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>White tank top</p>
-                  <h4><span class="price">$29</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$29</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -128,7 +128,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Yellow and black bikini</p>
-                  <h4><span class="price">$50</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$50</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -183,7 +183,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Assorted-color shirt lot hang on rack</p>
-                  <h4><span class="price">$500</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$500</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -216,7 +216,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Orange and white headdress</p>
-                  <h4><span class="price">$30</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$30</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -249,7 +249,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>Black, white, and gray textiles</p>
-                  <h4><span class="price">$99</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$99</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
                 <div data-percard class="percard catalogue">
@@ -271,7 +271,7 @@
                   />
                   <span class="discount">-5%</span>
                   <p>White beach dress</p>
-                  <h4><span class="price">$220</span><span data-catalogue class="tag">Male</span></h4>
+                  <h4><span class="price">$220</span><span data-catalogue class="tag">Female</span></h4>
                   </a>
                 </div>
               </div>
